Intellij ga error Oblig2Test, derfor har jeg endret litt på to linjer der har ellers fortsatt litt på oppgave 3b, og 3a. de er ikke løst enda