@@ -918,7 +918,8 @@ class Oblig2Test {
 
         for (int i = 1; i <= 100_000; i++) nyliste.leggInn(i);
         long tid1 = System.currentTimeMillis();
-        for (int i = 40000; i <= 50000; i++) nyliste.fjern(new Integer(i));
+                                                            //endret fra new Integer(i)
+        for (int i = 40000; i <= 50000; i++) nyliste.fjern(Integer.valueOf(i));
         tid1 = System.currentTimeMillis() - tid1;
         nyliste = new DobbeltLenketListe<>();
 
@@ -1064,8 +1065,8 @@ class Oblig2Test {
             }
         }
 
-        i = liste.iterator();
-        liste.fjern(new Integer(8));  // bruker fjern(T) etter at iteratoren er opprettet
+        i = liste.iterator();  // endre fra new Integer(8)
+        liste.fjern(Integer.valueOf(8));  // bruker fjern(T) etter at iteratoren er opprettet
 
         try {
             i.next();
